fix: dropdown panel z-index rule

--- a/assets/css/formKit-PrimeVue-overrides.css
+++ b/assets/css/formKit-PrimeVue-overrides.css
@@ -1,19 +1,23 @@
-.p-password{
-    display:block !important;
+.p-password {
+    display: block !important;
 }
 
-.p-checkbox{
+.p-checkbox {
     vertical-align: middle !important;
 }
 
-.formkit-outer[data-disabled='true'] input.p-component {
+.formkit-outer[data-disabled="true"] input.p-component {
     @apply pointer-events-none select-none bg-gray-200/25 text-gray-400/75;
 }
 
-.formkit-form button[type=submit] {
+.formkit-form button[type="submit"] {
     @apply before:w-0 before:h-0 before:opacity-0 before:transition-all before:duration-150;
 }
 
-.formkit-form[data-loading='true'] button[type=submit] {
+.formkit-form[data-loading="true"] button[type="submit"] {
     @apply before:w-4 before:h-4 before:mr-2 before:opacity-100 before:border before:border-r-transparent before:rounded-3xl before:border-white before:animate-spin pointer-events-none select-none opacity-75;
+}
+
+.p-dropdown-panel {
+    z-index: 9999 !important;
 }
